@@ -1,0 +1,182 @@
+/**
+ * CSS file for Webspark hero module.
+ */
+
+/* Increase font size of modal warning and move higher */
+
+.hero-warning {
+  position: relative;
+  top: -105px;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+/* Make hero background image responsive */
+
+.pane-bundle-jumbohero {
+  background-size: cover;
+  width: 100%;
+  margin-top: -1px;
+  .pane-content {
+    position: relative;
+    height: 700px;
+    padding: 0 0.9375em;
+  }
+  .jumbotext-wrapper {
+    width: 100%;
+  }
+  .field-name-field-webspark-jumbo-position {
+    display: none;
+  }
+  p {
+    margin: 0;
+    padding: 0;
+  }
+  h2 {
+    color: white;
+    font-size: 3.75rem;
+    font-weight: 900;
+    line-height: 1;
+    margin: 0;
+    padding: 0.625rem 0;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  }
+  .field-name-field-webspark-jumbohero-blurb {
+    max-width: 900px;
+    margin-bottom: 1.5em;
+    color: white;
+    font-size: 1.5em;
+    line-height: 1.5em;
+    font-weight: 900;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  }
+  .field-name-field-webspark-hero-ugradbtn, .field-name-field-webspark-hero-gradbtn {
+    width: 41.6667%;
+    display: inline-block;
+    margin-bottom: 0.75em;
+  }
+  .field-name-field-webspark-hero-ugradbtn {
+    padding-right: 0.9375em;
+  }
+  .field-name-field-webspark-hero-gradbtn {
+    padding-left: 0.9375em;
+  }
+  .position-top-left {
+    padding-top: 4.6875em;
+    text-align: left;
+  }
+  .position-top-center {
+    padding-top: 4.6875em;
+    text-align: center;
+    .field-name-field-webspark-jumbohero-blurb {
+      margin: 0 auto;
+    }
+  }
+  .position-top-right {
+    padding-top: 4.6875em;
+    text-align: right;
+    .field-name-field-webspark-jumbohero-blurb {
+      float: right;
+    }
+  }
+  .position-bottom-left {
+    position: absolute;
+    bottom: 5em;
+    padding-top: 0;
+  }
+  .position-bottom-center {
+    position: absolute;
+    bottom: 5em;
+    padding-top: 0;
+    text-align: center;
+    .field-name-field-webspark-jumbohero-blurb {
+      margin: 0 auto;
+    }
+  }
+  .position-bottom-right {
+    position: absolute;
+    bottom: 5em;
+    padding-top: 0;
+    text-align: right;
+    .field-name-field-webspark-jumbohero-blurb {
+      float: right;
+    }
+  }
+}
+
+/* Button styles */
+
+/* Positioning content within jumbo hero */
+
+/* =MEDIA QUERIES
+-------------------------------------------------------------- */
+@media (min-width: 1200px) {
+  .pane-bundle-jumbohero {
+    .field-name-field-webspark-hero-ugradbtn,
+    .field-name-field-webspark-hero-gradbtn {
+      width: 33.3333%;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .pane-bundle-jumbohero {
+    .jumbotext-wrapper {
+      width: 95%;
+    }
+    h2 {
+      font-size: 3.125rem;
+    }
+    .field-name-field-webspark-jumbohero-blurb {
+      font-size: 1.3125em;
+      line-height: 1.3125em;
+    }
+    .field-name-field-webspark-hero-ugradbtn,
+    .field-name-field-webspark-hero-gradbtn {
+      width: 50%;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .pane-bundle-jumbohero {
+    h2 {
+      padding-top: 1.875em;
+      font-size: 2.5rem;
+    }
+    // Hide overflow blurbs
+    .field-name-field-webspark-jumbohero-blurb .field-item {
+      & > *:first-child {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+      // If multiple paragraphs or other DOM elements, hide them all but the first
+      & > *:nth-child(n+2) {
+        display: none;
+      }
+    }
+    .position-top-right .field-name-field-webspark-jumbohero-blurb,
+    .position-bottom-right .field-name-field-webspark-jumbohero-blurb {
+      margin-bottom: 0;
+    }
+    .field-name-field-webspark-hero-ugradbtn,
+    .field-name-field-webspark-hero-gradbtn {
+      display: block;
+      width: 100%;
+      margin: 0;
+      padding: 0 0.9375em;
+    }
+    .position-bottom-left,
+    .position-bottom-center,
+    .position-bottom-right {
+      bottom: 5em;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .pane-bundle-jumbohero .jumbotext-wrapper {
+    width: 90%;
+  }
+}
