@@ -1,8 +1,8 @@
 name = Webspark Jumbo Hero
-description = Adds a jumbo (1170x700px) hero widget for use with Panels IPE
+description = "Adds jumbo-sized (1170x700px) hero widget for use with Panels"
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.3
+version = 7.x-1.4
 project = webspark_jumbohero
 dependencies[] = backgroundfield
 dependencies[] = ctools
